--- a/sly.html
+++ b/sly.html
@@ -1,5 +1,5 @@
 <h1>wassup motherfuckers</h1>
-<p> it is me the one and only am still trying to perfect git hub and atom wish me luck
+<p> it is me the one and only am still trying to perfect git hub and atom wish me what luck
 </p>
 <p> what</p>
 <p>yes</p>
